@@ -2,6 +2,8 @@
 
 	* DESCRIPTION (Version, Date): Release 0.0.6
 
+	* .travis.yml: Switch to bionic and R 4.0.0
+
 2020-06-08  Joseph Stachelek  <stachel2@msu.edu>
 
 	* R/binb.R: Update natbib default from 'none' to 'default' to please
